[project]
name = "llm-llama-server"
version = "0.1"
description = "Interact with llama-server models"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-llama-server"
Changelog = "https://github.com/simonw/llm-llama-server/releases"
Issues = "https://github.com/simonw/llm-llama-server/issues"
CI = "https://github.com/simonw/llm-llama-server/actions"

[project.entry-points.llm]
llama_server = "llm_llama_server"

[project.optional-dependencies]
test = ["pytest"]
